fix background flickering on firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,12 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 html {
   font-size: 62.5%;
@@ -26,7 +29,9 @@ body {
 .pillar {
   width: 64px;
   position: fixed;
-  bottom: 0%; }
+  bottom: 0%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden; }
   .pillar::before, .pillar::after {
     content: '';
     position: absolute;
@@ -41,16 +46,24 @@ body {
     height: 90%;
     right: calc(50% + 25px); }
     .pillar.left::before {
+      background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.8))), repeating-linear-gradient(135deg, #C59A43, #C59A43 20px, #111 20px, #111 23px);
+      background-image: -o-linear-gradient(top, transparent, rgba(0, 0, 0, 0.8)), -o-repeating-linear-gradient(315deg, #C59A43, #C59A43 20px, #111 20px, #111 23px);
       background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.8)), repeating-linear-gradient(135deg, #C59A43, #C59A43 20px, #111 20px, #111 23px); }
     .pillar.left::after {
+      background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.8))), repeating-linear-gradient(225deg, #C59A43, #C59A43 20px, #111 20px, #111 23px);
+      background-image: -o-linear-gradient(top, transparent, rgba(0, 0, 0, 0.8)), -o-repeating-linear-gradient(225deg, #C59A43, #C59A43 20px, #111 20px, #111 23px);
       background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.8)), repeating-linear-gradient(225deg, #C59A43, #C59A43 20px, #111 20px, #111 23px); }
   .pillar.right {
     height: 80%;
     left: calc(50% + 25px);
-    animation: setHeight 6s linear infinite alternate-reverse; }
+    animation: setHeight 6s ease-in-out infinite alternate-reverse; }
     .pillar.right::before {
+      background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.8))), repeating-linear-gradient(225deg, #C59A43, #C59A43 20px, #111 20px, #111 23px);
+      background-image: -o-linear-gradient(top, transparent, rgba(0, 0, 0, 0.8)), -o-repeating-linear-gradient(225deg, #C59A43, #C59A43 20px, #111 20px, #111 23px);
       background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.8)), repeating-linear-gradient(225deg, #C59A43, #C59A43 20px, #111 20px, #111 23px); }
     .pillar.right::after {
+      background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(0, 0, 0, 0.8))), repeating-linear-gradient(135deg, #C59A43, #C59A43 20px, #111 20px, #111 23px);
+      background-image: -o-linear-gradient(top, transparent, rgba(0, 0, 0, 0.8)), -o-repeating-linear-gradient(315deg, #C59A43, #C59A43 20px, #111 20px, #111 23px);
       background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.8)), repeating-linear-gradient(135deg, #C59A43, #C59A43 20px, #111 20px, #111 23px); }
   .pillar-frame {
     position: absolute;
@@ -60,7 +73,9 @@ body {
     height: calc(100% - 5px);
     border-style: solid;
     border-width: 2px;
-    border-image: linear-gradient(to bottom, #C59A43, #4b3813) 1;
+    -o-border-image: -o-linear-gradient(top, #C59A43, #4b3813) 1;
+       border-image: -webkit-gradient(linear, left top, left bottom, from(#C59A43), to(#4b3813)) 1;
+       border-image: linear-gradient(to bottom, #C59A43, #4b3813) 1;
     z-index: -1; }
   .pillar-top {
     position: absolute;
@@ -71,7 +86,9 @@ body {
     border: 4px #111 solid;
     outline: 2px #C59A43 solid;
     z-index: 1;
-    transform: translate(-50%, -50%) rotate(45deg);
+    -webkit-transform: translate(-50%, -50%) rotate(45deg);
+        -ms-transform: translate(-50%, -50%) rotate(45deg);
+            transform: translate(-50%, -50%) rotate(45deg);
     background-color: #111; }
     .pillar-top::before {
       content: "";
@@ -80,14 +97,28 @@ body {
       position: absolute;
       left: 50%;
       bottom: -50%;
-      transform: translate(-50%, -50%); }
+      -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%); }
     .pillar-top.up::before {
+      background-image: -o-linear-gradient(315deg, #111 50%, var(--clr-green-light) 25%, var(--clr-green) 25%);
       background-image: linear-gradient(135deg, #111 50%, var(--clr-green-light) 25%, var(--clr-green) 25%); }
     .pillar-top.down::before {
+      background-image: -o-linear-gradient(315deg, #111 50%, var(--clr-red-light) 25%, var(--clr-red) 25%);
       background-image: linear-gradient(135deg, #111 50%, var(--clr-red-light) 25%, var(--clr-red) 25%); }
+
+@-webkit-keyframes setHeight {
+  0% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%); }
+  100% {
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%); } }
 
 @keyframes setHeight {
   0% {
-    transform: translateY(0%); }
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%); }
   100% {
-    transform: translateY(100%); } }
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%); } }
